[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
#src = ["my_project"] # TODO: if your code is in a subdirectory, change this

[tool.ruff.lint]
select = ["E", "F", "I001", "TID"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore `F401` (import violations) in all `__init__.py` files
#"*.py" = ["E501"]  # Ignore `E501` (line too long) in all files
#"*.ipynb" = ["E501"]  # Ignore `E501` (line too long) in all notebooks
